--- a/JsonMVC/JsonMVC.Web/JsonMVC.Web.csproj
+++ b/JsonMVC/JsonMVC.Web/JsonMVC.Web.csproj
@@ -177,7 +177,11 @@
     <Content Include="Scripts\functions.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\jquery.tabletojson.min.js.map">
+      <DependentUpon>jquery.tabletojson.min.js</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.tabletojson.js" />
     <Content Include="Scripts\jquery.tabletojson.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
