--- a/JsonMVC/JsonMVC.Domain/JsonMVC.Domain.csproj
+++ b/JsonMVC/JsonMVC.Domain/JsonMVC.Domain.csproj
@@ -39,13 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\Services\IUsuarioService.cs" />
     <Compile Include="Model\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Contracts\Repositories\IUsuarioRepository.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Contracts\Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
