Incorporado thema para master.

--- a/JsonMVC/JsonMVC.Web/JsonMVC.Web.csproj
+++ b/JsonMVC/JsonMVC.Web/JsonMVC.Web.csproj
@@ -130,7 +130,13 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\img\icoLogin.png" />
     <Content Include="Content\img\icoPass.png" />
-    <Content Include="Content\StyleLogin.css" />
+    <Content Include="Content\login\StyleLogin.css" />
+    <Content Include="Content\themebucket\bootstrap-reset.css" />
+    <Content Include="Content\themebucket\clndr.css" />
+    <Content Include="Content\themebucket\jquery-jvectormap-1.2.2.css" />
+    <Content Include="Content\themebucket\jquery-ui-1.10.1.custom.min.css" />
+    <Content Include="Content\themebucket\style-responsive.css" />
+    <Content Include="Content\themebucket\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="font-awesome\css\font-awesome.css" />
     <Content Include="font-awesome\css\font-awesome.min.css" />
@@ -180,6 +186,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\functions.js" />
+    <Content Include="Scripts\ie8-responsive-file-warning.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\jquery.tabletojson.min.js.map">
@@ -195,6 +202,35 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\themebucket\clndr.js" />
+    <Content Include="Scripts\themebucket\css3clock.js" />
+    <Content Include="Scripts\themebucket\dashboard.js" />
+    <Content Include="Scripts\themebucket\evnt.calendar.init.js" />
+    <Content Include="Scripts\themebucket\excanvas.min.js" />
+    <Content Include="Scripts\themebucket\gauge.js" />
+    <Content Include="Scripts\themebucket\jquery-jvectormap-1.2.2.min.js" />
+    <Content Include="Scripts\themebucket\jquery-jvectormap-us-lcc-en.js" />
+    <Content Include="Scripts\themebucket\jquery-ui-1.10.1.custom.min.js" />
+    <Content Include="Scripts\themebucket\jquery.customSelect.min.js" />
+    <Content Include="Scripts\themebucket\jquery.dcjqaccordion.2.7.js" />
+    <Content Include="Scripts\themebucket\jquery.easypiechart.js" />
+    <Content Include="Scripts\themebucket\jquery.flot.animator.min.js" />
+    <Content Include="Scripts\themebucket\jquery.flot.growraf.js" />
+    <Content Include="Scripts\themebucket\jquery.flot.js" />
+    <Content Include="Scripts\themebucket\jquery.flot.pie.resize.js" />
+    <Content Include="Scripts\themebucket\jquery.flot.resize.js" />
+    <Content Include="Scripts\themebucket\jquery.flot.tooltip.min.js" />
+    <Content Include="Scripts\themebucket\jquery.js" />
+    <Content Include="Scripts\themebucket\jquery.nicescroll.js" />
+    <Content Include="Scripts\themebucket\jquery.scrollTo.js" />
+    <Content Include="Scripts\themebucket\jquery.scrollTo.min.js" />
+    <Content Include="Scripts\themebucket\jquery.slimscroll.js" />
+    <Content Include="Scripts\themebucket\jquery.sparkline.js" />
+    <Content Include="Scripts\themebucket\moment-2.2.1.js" />
+    <Content Include="Scripts\themebucket\morris.js" />
+    <Content Include="Scripts\themebucket\raphael-min.js" />
+    <Content Include="Scripts\themebucket\scripts.js" />
+    <Content Include="Scripts\themebucket\skycons.js" />
     <Content Include="Scripts\usuario\functionusuario.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
