--- a/JsonMVC/JsonMVC.Web/JsonMVC.Web.csproj
+++ b/JsonMVC/JsonMVC.Web/JsonMVC.Web.csproj
@@ -20,6 +20,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -128,8 +129,13 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\img\acc-expand.png" />
+    <Content Include="Content\img\avatar1_small.png" />
     <Content Include="Content\img\icoLogin.png" />
     <Content Include="Content\img\icoPass.png" />
+    <Content Include="Content\img\logo.png" />
+    <Content Include="Content\img\nav-expand.png" />
+    <Content Include="Content\img\search-icon.png" />
     <Content Include="Content\login\StyleLogin.css" />
     <Content Include="Content\themebucket\bootstrap-reset.css" />
     <Content Include="Content\themebucket\clndr.css" />
